2011-11-14  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/plot2d.c (store2d_point): Fix for 4-column mode of
	BOXPLOT style which did not handle log scale correctly.

2011-11-14  Bastian Maerkisch  <bmaerkisch@web.de>

	src/win.trm (WIN_set_color): Immediately translate palette color
	values to RGB instead of passing them on. This makes it possible
	to use more than one palettes in multiplots and in different
	graph windows. Test e.g. with pm3dcolors.dem

	* src/win/wgraph.c src/win/wresourc.h src/win/wgnuplib.h: Add a
	separate switch to toggle antialiasing of polygons.

	* src/win/wgraph.c (Draw_XOR_Text): Implement a 10 year old FIXME:
	Use proper raster operation instead of double inversion.

2011-11-12  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/README.win-ja src/win/wgnuplot-ja.mnu: Update and sync
	with wgnuplot.mnu

2011-11-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/set.c (set_degreesign): Windows implementation using a Windows
	API call since iconv() does not understand locales as returned by
	setlocale().

	* src/command.c (help_command): HTML help window need to occlude
	the text window.

	* term/win.trm (WIN_filled_polygon): Use boxfill for filled polygons
	which are actually rectangles.

	* src/win/wgnuplib.h src/win/wgraph.c: Add support in windows terminal
	for toggling individual plots on/off by clicking on the corresponding
	key sample in addition to toggling via toolbar buttons.

2011-11-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_degreesign):  More attempts to work around oddities in
	Solaris locale handling.

2011-11-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff: Sync to docs version 1.699.

	* docs/gnuplot.doc term/be.trm term/cairo.trm term/context.trm
	term/win.trm: Fix typos.

2011-11-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/command.c src/eval.c src/gadgets.c src/graphics.c